Sat Dec 22 06:29:23 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Only set close-on-exec on the lockfile fd if
	  we are able to clear it in the child process, and clear it in the
	  child process if we set it when we opened it.

Sat Dec 22 06:14:40 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,net/progclient.cc: Use SOCK_CLOEXEC with
	  socketpair(), and then clear the close-on-exec flag for child process
	  end of the pair before we call exec.

Sat Dec 22 06:13:44 GMT 2012  Olly Betts <olly@survex.com>

	* net/progclient.cc: Remove O_CLOEXEC where we open stderr on /dev/null
	  before calling exec as we want that fd to survive the exec!

Sat Dec 22 05:53:12 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,backends/flint_lock.cc,common/Makefile.mk,
	  common/safesyssocket.h,net/progclient.cc,net/tcpclient.cc,
	  net/tcpserver.cc,tests/harness/backendmanager_remotetcp.cc:
	  Use SOCK_CLOEXEC where available, and try FD_CLOEXEC if SOCK_CLOEXEC
	  isn't available.

Sat Dec 22 04:09:23 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/,backends/flint_lock.cc,
	  common/debuglog.cc,common/replicate_utils.cc,common/safefcntl.h,
	  net/progclient.cc,net/remoteconnection.cc,
	  tests/harness/testsuite.cc: If O_CLOEXEC is supported, pass it to
	  open() so fds we open are closed if the application using us calls
	  exec().

Fri Dec 21 03:48:36 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Don't autodisable the remote backend if we fail to find
	  a required function.  It's more likely the user needs to pass
	  LIBS=-lfoo and it's more helpful to error out so they can do that, or
	  pass --disable-backend-remote if they really don't want it, rather
	  than having them not notice the automatic disabling until after
	  they've built.  This also matches what we do for the disk based
	  backends.

Fri Dec 21 03:48:11 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Expand comment about DJGPP.
